--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   Oh hi, diese Website ist im Aufbau und daher nicht verfügbar. 
 </p>
 <p>
-  Siehe gerne aif anderen Websites von mir vorbei!
+  Siehe gerne auf anderen Websites von mir vorbei!
 </p>
-<a href="https://aqua-jean-s.de">aqua-jean-s.de</a>
-<a href="https://jean-s.xyz">jean-s.xyz</a>
+<a href="https://aqua-jean-s.de" target="_blank">aqua-jean-s.de</a>
+<a href="https://jean-s.xyz" target="_blank">jean-s.xyz</a>
